# conmon

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  .pylintrc  LICENSE  README.md  activate_venv.bat  activate_venv.sh  check_tus.py  checkme.py  conan_monitor.py  extract.py  pyproject.toml  pyvenv.py  requirements.in  requirements.txt  setup.cfg  setup.py
conmon/: __init__.py  __main__.py  bash.py  buildmon.py  check_tus.py  cleanup.py  compilers.py  conan.py  json.py  logging.py  regex.py  replay.py  shell.py  state.py  streams.py  utils.py  warnings.py
recipe/: conanfile.txt
reports/: report.lnx.json  report.win.json
tests/: test_buildmon.py  test_builmon.py  test_regex.py  test_requirements.py  test_shell.py  test_utils.py  test_warnings.py
