[tool.black]
line-length = 88
target_version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.cache
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
minversion = "6.0"
python_files = ["tests.py", "test_*.py"]
addopts = "-vv --tb=auto --cov=conmon --cov-report html"
cache_dir = ".cache/pytest"

[tool.mypy]
python_version = "3.6"
cache_dir = ".cache/mypy"
namespace_packages = true
exclude = "build|venv"
ignore_missing_imports = true

[tool.coverage.run]
source = ["conmon/*"]

[tool.coverage.html]
directory = ".cache/coverage"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"