[metadata]
name = conmon
version = 0.1.0
author = flashdagger
author_email = flashdagger@googlemail.com
url = https://github.com/flashdagger/conmon
description = an alternative frontend for conan with build introspection capabilities
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
platform = any
keywords =
  conan
  automation
  build-systems
classifiers =
  Development Status :: 4 - Beta
  License :: OSI Approved :: MIT License
  Intended Audience :: Developers
  Natural Language :: English
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: Implementation
  Programming Language :: Python :: Implementation :: CPython
  Programming Language :: Python :: Implementation :: PyPy
  Operating System :: OS Independent
  Environment :: Console
  Software Development :: Build Tools

[options]
python_requires = >= 3.6
packages = conmon
include_package_data = True
zip_safe = False
install_requires =
    psutil >= 5.7
    colorama >= 0.3.3
    colorlog >= 4.1
setup_requires = pytest-runner
tests_require = pytest
test_suite = tests

[options.entry_points]
console_scripts =
    conmon = conmon.__main__:main
    conmon-clean-cache = conmon.cleanup:main

[build-system]
requires =
    setuptools
    wheel

[aliases]
test = pytest

[bdist_wheel]
universal = 0

[sdist]
formats = zip


[bumpversion]
current_version = 0.1.0
commit = True
message = Update version {current_version} → {new_version}

[bumpversion:file:conmon/__init__.py]

[bumpversion:file:setup.py]


[mypy]
python_version = 3.6
cache_dir = cache/mypy

[tool:pytest]
python_files = tests.py test_*.py
cache_dir = cache/pytest
addopts = -vv

[coverage:run]
source = conmon/*

[coverage:html]
directory = report
